--- a/spring-mvc-app-library-Gen2/src/main/webapp/WEB-INF/views/book/index.html
+++ b/spring-mvc-app-library-Gen2/src/main/webapp/WEB-INF/views/book/index.html
@@ -8,8 +8,8 @@
 
 <body>
 	<div th:each="book : ${books}">
-		<a th:href="@{/book/{id}(id=${book.getBook_id()})}"
-			th:text="${book.getTitle() + ', ' + book.getAuthor_name() + ' ' + book.getAuthor_surname() + ', ' + #dates.year(book.getYear_of_publishing())}">Books</a>
+		<a th:href="@{/book/{id}(id=${book.getBookId()})}"
+			th:text="${book.getTitle() + ', ' + book.getAuthorName() + ' ' + book.getAuthorSurname() + ', ' + #dates.year(book.getYearOfPublishing())}">Books</a>
 	</div>
 	<br />
 	<hr />
