--- a/spring-mvc-app-library-Gen2/src/main/webapp/WEB-INF/views/book/show.html
+++ b/spring-mvc-app-library-Gen2/src/main/webapp/WEB-INF/views/book/show.html
@@ -8,15 +8,15 @@
 
 <body>
 	<p
-		th:text="${book.getTitle() + ', ' + book.getAuthor_name() + ' ' + book.getAuthor_surname() + ', ' + #dates.year(book.getYear_of_publishing())}">
+		th:text="${book.getTitle() + ', ' + book.getAuthorName() + ' ' + book.getAuthorSurname() + ', ' + #dates.year(book.getYearOfPublishing())}">
 		Book's title</p>
-	<form th:if="${book.getOwner() != NULL}" th:method="PATCH" th:action="@{/book/free?book_id={book_id}(book_id=${book.getBook_id()})}" th:object="${book}">
+	<form th:if="${book.getOwner() != NULL}" th:method="PATCH" th:action="@{/book/free?book_id={book_id}(book_id=${book.getBookId()})}" th:object="${book}">
 		<p>This book taken by: </p>
 		<p th:if="${person.getPatronymic != NULL}" th:text="${person.getSurname() + ' ' + person.getName() + ' ' + person.getPatronymic()}"></p>
 		<p th:unless="${person.getPatronymic != NULL}" th:text="${person.getSurname() + ' ' + person.getName()}"></p>
 		<input type="submit" value="Make book free" />
 	</form>
-	<form th:unless="${book.getOwner() != NULL}" th:method="PATCH" th:action="@{/book/take/{id}(id=${book.getBook_id()})}">
+	<form th:unless="${book.getOwner() != NULL}" th:method="PATCH" th:action="@{/book/take/{id}(id=${book.getBookId()})}">
 		<p>This book is free.</p>
 		<label for="person">Choose a person who can take it:</label>
 		<select th:object="${person}" th:field="*{person_id}" id="person">
@@ -27,11 +27,11 @@
 	</form>
 	<br/>
 	<hr/>
-	<form th:method="GET" th:action="@{/book/{id}/edit(id=${book.getBook_id()})}">
+	<form th:method="GET" th:action="@{/book/{id}/edit(id=${book.getBookId()})}">
 		<input type="submit" value="Edit" />
 	</form>
 	<br/>
-	<form th:method="DELETE" th:action="@{/book/{id}(id=${book.getBook_id()})}">
+	<form th:method="DELETE" th:action="@{/book/{id}(id=${book.getBookId()})}">
 		<input type="submit" value="Delete" />
 	</form>
 </body>
